# hailo-ollama-openclaw-adapter

./: .gitignore  LICENSE  README.md  adapter.py  hailo_gen_ai_model_zoo_5.2.0_arm64.deb  openclaw_example.json  pyproject.toml  requirements.txt  setup.py
src/hailo_ollama_adapter/: __init__.py  __main__.py  adapter.py  cli.py
tests/: conftest.py  test_adapter.py
