[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hailo-ollama-openclaw-adapter"
version = "2.0.0"
description = "FastAPI adapter bridging Hailo-Ollama to OpenClaw 2026.4.20 on Raspberry Pi"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Sergii Tishchenko"},
]
requires-python = ">=3.10"
keywords = ["hailo", "ollama", "openclaw", "llm", "raspberry-pi", "ai-accelerator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.100",
    "httpx>=0.25",
    "uvicorn[standard]>=0.24",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=7",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/tishyk/hailo-ollama-openclaw-adapter"
Repository = "https://github.com/tishyk/hailo-ollama-openclaw-adapter"
Issues = "https://github.com/tishyk/hailo-ollama-openclaw-adapter/issues"

[project.scripts]
hailo-ollama-adapter = "hailo_ollama_adapter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]